@@ -20,6 +20,7 @@
 "Album Review":"",
 "Album gain":"",
 "Albums":"",
+"All":"",
 "All Artists":"",
 "All plugins up to date.":"",
 "Already in favorites":"",
@@ -195,6 +196,7 @@
 "Scroll to current track":"",
 "Search":"",
 "Search library":"",
+"Search:":"",
 "Select":"",
 "Select All":"",
 "Select category":"",
@@ -203,7 +205,6 @@
 "Selected Genres":"",
 "Server Settings":"",
 "Server connection lost...":"",
-"Set":"",
 "Set Defaults":"",
 "Set rating":"",
 "Set rating for %1 tracks":"",
@@ -231,7 +232,6 @@
 "Shuffle tracks":"",
 "Signal Strength: %1%":"",
 "Sleep":"",
-"Sleep in":"",
 "Smart gain":"",
 "Snooze (minutes)":"",
 "Something went wrong!":"",
@@ -264,6 +264,7 @@
 "Total genres: %1":"",
 "Total songs: %1":"",
 "Track gain":"",
+"Tracks":"",
 "Tues":"",
 "Tuesday":"",
 "Type: %1":"",
