@@ -133,6 +133,7 @@
 "Add option to main menu to launch player.":"",
 "Add selection to queue":"",
 "Album Mix":"",
+"All":"",
 "All plugins up to date.":"",
 "Always":"",
 "Always show menu":"",
@@ -232,6 +233,7 @@
 "Scroll play queue when current track changes.":"",
 "Scroll to current track":"",
 "Search library":"",
+"Search:":"",
 "Select":"",
 "Select All":"",
 "Select category":"",
@@ -239,7 +241,6 @@
 "Select which players you would like to synchronise with '%1'.":"",
 "Selected Genres":"",
 "Server connection lost...":"",
-"Set":"",
 "Set Defaults":"",
 "Set rating":"",
 "Set rating for %1 tracks":"",
@@ -263,7 +264,6 @@
 "Shuffle tracks":"",
 "Signal Strength: %1%":"",
 "Sleep":"",
-"Sleep in":"",
 "Song Information":"",
 "Song Mix":"",
 "Sound":"",
@@ -283,6 +283,7 @@
 "Total duration: %1":"",
 "Total genres: %1":"",
 "Total songs: %1":"",
+"Tracks":"",
 "Type: %1":"",
 "URL":"",
 "Un-pin":"",
