@@ -51,6 +51,7 @@
     <lms-favorite v-if="dialogs.favorite"></lms-favorite>
     <lms-rating-dialog v-if="dialogs.rating"></lms-rating-dialog>
     <lms-sleep-dialog v-if="dialogs.sleep"></lms-sleep-dialog>
+    <lms-search-dialog v-if="dialogs.search"></lms-search-dialog>
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
      <div class="pswp__bg"></div>
      <div class="pswp__scroll-wrap">
@@ -122,6 +123,7 @@
   <script src="html/js/manage-players.js?r=[% material_revision %]"></script>
   <script src="html/js/favorite-dialog.js?r=[% material_revision %]"></script>
   <script src="html/js/sleep-dialog.js?r=[% material_revision %]"></script>
+  <script src="html/js/search-dialog.js?r=[% material_revision %]"></script>
   <script src="html/js/i18n.js?r=[% material_revision %]"></script>
   <script src="html/js/store.js?r=[% material_revision %]"></script>
   <script src="html/js/init.js?r=[% material_revision %]"></script>
